--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/LesiaUKR/GoIT-REACT-HW-08-phonebook_login",
+  "homepage": "https://lesiaukr.github.io/GoIT-REACT-HW-08-phonebook_login/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
